--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,109 @@
-/* You can add global styles to this file, and also import other style files */
+// /* You can add global styles to this file, and also import other style files */
+
+html,
+body {
+  width: 100%;
+  height:100%;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+}
+
+// @mixin dots($count) {
+//   $text-shadow: ();
+//   @for $i from 0 through $count {
+//     $text-shadow: $text-shadow,
+//                  (-.5+(random()) * 3) + em
+//                  (-.5+(random()) * 3) + em
+//                  7px
+//                  hsla(random() * 360, 100%, 50%,.9);
+//   }
+//   text-shadow: $text-shadow;
+// }
+
+// html {
+//   // font: 5vmin/1.3 Serif;
+//   overflow: hidden;
+//   background: #123;
+// }
+
+// body {
+//   display: block;
+//   font-size: 52px;
+//   color: transparent;
+// }
+
+// // head::before, head::after,
+// body::before, body::after {
+//   position: fixed;
+//   top: 50%;
+//   left: 50%;
+//   // width: 3em;
+//   // height: 3em;
+//   content: '.';
+//   mix-blend-mode: screen;
+//   // animation: 44s -27s move infinite ease-in-out alternate;
+//   animation:pulse 3s linear infinite alternate;
+
+//   // position: absolute;
+//     // width: 933px;
+//     // height: 962px;
+//     filter: blur(114px);
+// }
+
+
+// // body::before {
+// //   @include dots(3);
+// //   animation-duration: 44s;
+// //   animation-delay: -27s;
+// // }
+
+// body::after {
+//   @include dots(0);
+//   // animation-duration: 43s;
+//   // animation-delay: -32s;
+// }
+
+// body::after {
+//   @include dots(1);
+//   // animation-duration: 43s;
+//   // animation-delay: -32s;
+// }
+
+// // head::before {
+// //   @include dots(40);
+// //   animation-duration: 42s;
+// //   animation-delay: -23s;
+// // }
+
+// // head::after {
+// //   @include dots(40);
+// //   animation-duration: 41s;
+// //   animation-delay: -19s;
+// // }
+
+
+// // @keyframes move {
+// //   from {
+// //     transform: rotate(0deg) scale(12) translateX(-20px);
+// //   }
+// //   to {
+// //     transform: rotate(360deg) scale(18) translateX(20px);
+// //   }
+// // }
+
+
+// @keyframes pulse{
+//     from {
+//       background-size:55% 55%;
+//     }
+//     50% {
+//       background-size:58% 58%;
+//       }
+//     70% {
+//       background-size:58% 58%;
+//       }
+//     to {
+//       background-size:85% 85%;
+//     }
+//   }
