added welcome module

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,8 @@
-<div class="container">
+<div class="background">
   <div class="bg-lights red"></div>
+  <app-welcome></app-welcome>
+  <!-- <app-logo></app-logo>
   <app-logo></app-logo>
-  <app-logo></app-logo>
-  <app-logo></app-logo>
+  <app-logo></app-logo> -->
 </div>
-<!-- <app-logo></app-logo> -->
+
