--- a/src/app/shared/logo/logo.component.scss
+++ b/src/app/shared/logo/logo.component.scss
@@ -1,3 +1,8 @@
-p {
-  color: lime;
+.logo-container img {
+  // position: absolute;
+  // left: -50%;
+  // translate: -50% 50%;
+  width: 138px;
+  height: 23px;
+  background-color: transparent;
 }
