--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -11,7 +11,8 @@
     <div class="grid-container">
       <app-quiz-questions></app-quiz-questions>
       <!-- <div class="cell cell-1"></div> -->
-      <div class="cell cell-2">2.</div>
+      <app-quiz-image class="cell-2"></app-quiz-image>
+      <!-- <div class="cell cell-2">2.</div> -->
     </div>
 
   </main>
