--- a/src/app/quiz/quiz-questions/quiz-questions.component.html
+++ b/src/app/quiz/quiz-questions/quiz-questions.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <h2>Jazz song</h2>
-  
+  <p class="quiz-description">Listen to the audio and guess what song is it from the list</p>
+  <app-audio-player></app-audio-player>
 </div>
 
