--- a/src/app/quiz/quiz-questions/quiz-questions.component.scss
+++ b/src/app/quiz/quiz-questions/quiz-questions.component.scss
@@ -1,8 +1,16 @@
 .container {
-  margin: 60px;
+  margin: 30px 60px 60px;
+
 }
 
 .quiz-description {
   color: #fff;
   line-height: 24px;
+}
+
+.answer-list {
+  margin-top: 30px;
+  margin-bottom: 0;
+  padding: 0;
+  max-width: 500px;
 }
