quiz info component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="background">
   <div class="bg-lights red"></div>
   <!-- <app-welcome></app-welcome> -->
-
-  <app-quiz></app-quiz>
+  <router-outlet></router-outlet>
+  <!-- <app-quiz></app-quiz> -->
 </div>
 
