--- a/src/app/audio-player/components/player-button/player-button.component.scss
+++ b/src/app/audio-player/components/player-button/player-button.component.scss
@@ -1,8 +1,8 @@
 .control-btn {
   position: absolute;
-  top: 50%;
-  right: 50%;
-  transform: translate(50%, -50%);
+  top: 20%;
+  left: 6%;
+  transform: translate(50%, 50%);
   width: 47px;
   height: 47px;
   border-radius: 50%;
@@ -13,12 +13,21 @@
   .play-btn {
     width: 10px;
     height: 14px;
-    transform: translate(0, 10%);
+    transform: translate(20%, 10%);
   }
 
   &:hover {
     background-color: rgba(255, 255, 255, 1);
   }
+
+}
+
+@media (max-width: 1200px) {
+  .control-btn {
+    top: 20%;
+    left: 3%;
+  }
+
 
 }
 
