--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -12,12 +12,13 @@
       <app-quiz-questions></app-quiz-questions>
       <!-- <div class="cell cell-1"></div> -->
       <app-quiz-image class="cell-2"></app-quiz-image>
+      <app-quiz-info class="cell-1"></app-quiz-info>
       <!-- <div class="cell cell-2">2.</div> -->
     </div>
 
   </main>
   <footer>
-    <app-button></app-button>
+    <app-button [name]="'next question'"></app-button>
   </footer>
 </div>
 
