--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -9,7 +9,7 @@
       placeholder="TYPE YOUR NAME HERE..."
       autocomplete="off"
       maxlength="20">
-      <app-button></app-button>
+      <app-button [routenav]="'/quiz'"></app-button>
   </form>
 </div>
 
