--- a/src/app/audio-player/audio-player.component.scss
+++ b/src/app/audio-player/audio-player.component.scss
@@ -1,26 +1,48 @@
 
 .player {
- max-width: 460px;
+//  max-width: 460px;
   height: 114px;
   background-color: #373B62;
   border: 1px solid #373B62;
   border-radius: 5px;
   padding: 20px;
-
+  position: relative;
+  // display: flex;
+  // align-items: center;
 }
 
 .control-block {
-  position: relative;
+   // position: relative;
   width: 114px;
   height: 114px;
   background: linear-gradient(148.42deg, #EC1919 -0.53%, #D1C234 28.02%, #D134A5 60.47%, #3734D1 90.32%, #23B632 124.06%);
+
+
+  // z-index: 56;
   border-radius: 5px;
   margin-right: 20px;
 }
 
+// #bg {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   border-radius: 5px;
+
+//   /* Preserve aspet ratio */
+//   width: 114px;
+//   height: 114px;
+// }
+
 .audio-player {
+  height: 100%;
   display: flex;
   align-items: center;
+  justify-content: space-around;
+}
+
+.styling {
+  display: none;
 }
 
 // input[type="range"] {
