--- a/src/app/quiz/components/answer-card/answer-card.component.html
+++ b/src/app/quiz/components/answer-card/answer-card.component.html
@@ -1,12 +1,10 @@
-<li class="answer-card">
-  <div class="round">
-    <input type="checkbox" checked id="checkbox" />
-    <label for="checkbox"></label>
+<li   class="answer-card" id="card-{{ song.id }}">
+  <div class="round"  (click)="onChecked(song.id)">
+    <input type="checkbox" class="checkbox" id="{{ song.id }}" />
+    <label class="checkbox-label" id="label-{{ song.id }}" for="checkbox"></label>
   </div>
-  <!-- <input type="checkbox"> -->
   <div class="song-info">
-    <div>{{ song.id}} </div>
-    <div>{{ song.name }} - {{ song.title }}</div>
+    {{ song.id }}: {{ song.name }} - {{ song.title }}
   </div>
 </li>
 
