--- a/src/app/quiz/components/answer-card/answer-card.component.scss
+++ b/src/app/quiz/components/answer-card/answer-card.component.scss
@@ -13,6 +13,11 @@
 
 }
 
+// .label {
+//   background: transparent url('../../../../assets/check.png') no-repeat 80% 50%
+//   // background: red url('../../../../assets/check.png') no-repeat 0 50%;
+// }
+
 // input {
 //   margin: 20px;
 // }
@@ -26,13 +31,19 @@
 
 .round {
   position: relative;
-  // margin: 20px;
   margin-right: 30px;
 }
 
-.round label {
-  transform: translate(0%, -15%);
+.checkbox-label {
   background-color: #fff;
+  // background: red url('../../../../assets/check.png') no-repeat 50% 50%;
+}
+
+.round label {
+  // background: red url('../../../../assets/check.png') no-repeat 80% 50%;
+
+  transform: translate(0%, -15%);
+  // background-color: #fff;
   border: 1px solid #ccc;
   border-radius: 50%;
   cursor: pointer;
@@ -44,29 +55,44 @@
 
 }
 
-.round label:after {
-  border: 2px solid #fff;
-  border-top: none;
-  border-right: none;
-  content: "";
-  height: 6px;
+// .round label:after {
+//   border: 2px solid red;
+//   border-top: none;
+//   border-right: none;
+//   content: "";
+//   height: 6px;
+//   background-color: transparent;
+//   opacity: 0;
+//   position: absolute;
+//   top: 9px;
+//   left: 9px;
+//   transform: rotate(-45deg);
+//   width: 12px;
+// }
 
-  opacity: 0;
-  position: absolute;
-  top: 9px;
-  left: 9px;
-  transform: rotate(-45deg);
-  width: 12px;
-}
+// .round label:before {
+//   border: 2px solid lime;
+//   border-top: none;
+//   border-right: none;
+//   content: "";
+//   height: 6px;
+// // z-index: 70;
+//   opacity: 0;
+//   position: absolute;
+//   top: 9px;
+//   left: 9px;
+//   transform: rotate(90deg);
+//   width: 12px;
+// }
 
 .round input[type="checkbox"] {
   visibility: hidden;
 }
 
-.round input[type="checkbox"]:checked + label {
-  background-color: #66bb6a;
-  border-color: #66bb6a;
-}
+// .round input[type="checkbox"]:checked + label {
+//   background-color: #3E6441;
+//   border-color: #619A65;
+// }
 
 .round input[type="checkbox"]:checked + label:after {
   opacity: 1;
@@ -77,7 +103,17 @@
 
 
 
+// <app-quiz-answer-option
+//         *ngFor="let answer of question.data; let i = index"
+//         [status]="status[answer.id]"
+//         (click)="onAswerClick(answer, i)"
+//       >
+//     {{'0' + (i + 1) +' : ' + answer.name +' - ' + answer.songTitle}}
+//     </app-quiz-answer-option>
 
+// <div class="question__answer-song">
+//     <p><ng-content></ng-content>></p>
+//   </div>
 
 
 
