--- a/src/app/quiz/quiz.component.scss
+++ b/src/app/quiz/quiz.component.scss
@@ -42,11 +42,13 @@ footer {
 }
 
 .grid-container {
+  max-width: 1680px;
   // margin: 60px;
   // height: 100%;
-
   display: grid;
-  grid-template-columns: 1fr 1.2fr  ;
+  margin: 0 60px 60px;
+  // margin-top: 30px;
+  // margin-right: 60px;
   grid-column-gap: 60px;
 }
 
@@ -64,26 +66,46 @@ footer {
 // }
 
 
+.cell-1 {
+  // display: none;
+}
 
+.cell-2 {
+  display: none;
+}
 
-@media screen and (max-width: 1400px) {
+@media (min-width: 1200px) {
   .grid-container {
-    grid-template-columns: 1.2fr 1fr;
+    grid-template-columns: 1fr 1.6fr;
   }
 
-  // .cell-2 {
-  //   display: none;
-  // }
 
 }
 
+
+// @media screen and (max-width: 1400px) {
+//   .grid-container {
+//     grid-template-columns: 1.2fr 1fr;
+
+//   }
+
+
+
+// }
+
 @media screen and (max-width: 1200px) {
-  .grid-container {
-    grid-template-columns: 1fr;
-  }
+  // .grid-container {
+  //   grid-template-columns: 1fr;
+  //   // grid-template-rows: fr;
+  //   // grid-template-rows: 1fr 1fr;
+  // }
 
   .cell-2 {
     display: none;
+  }
+
+  .cell-1 {
+    display: block;
   }
 
 }
