--- a/src/app/quiz/components/answer-card/answer-card.component.html
+++ b/src/app/quiz/components/answer-card/answer-card.component.html
@@ -4,7 +4,8 @@
     <label class="checkbox-label" id="label-{{ song.id }}" for="checkbox"></label>
   </div>
   <div class="song-info">
-    {{ song.id }}: {{ song.name }} - {{ song.title }}
+    {{ cardId }}: {{ song.name }} - {{ song.songTitle }}
+
   </div>
 </li>
 
