--- a/src/app/quiz/quiz-questions/quiz-questions.component.html
+++ b/src/app/quiz/quiz-questions/quiz-questions.component.html
@@ -13,8 +13,9 @@
   </div> -->
   <ul class="answer-list">
     <app-answer-card
-      *ngFor="let song of songs"
-      [song]="song">
+      *ngFor="let song of songArr; let i = index"
+      [song]="song"
+      [cardId]="'0'+ (i + 1)">
     </app-answer-card>
   </ul>
 </div>
