--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -2,8 +2,8 @@
   <header>
     <app-logo></app-logo>
     <div class="user-info">
-      <div class="user-name">ROMAN</div>
-      <div class="user-score">Your score: 0</div>
+      <div class="user-name">{{ playerName }}</div>
+      <div class="user-score">Your score: {{ totalScores }}</div>
     </div>
   </header>
   <main>
