--- a/src/app/quiz/quiz-questions/quiz-questions.component.scss
+++ b/src/app/quiz/quiz-questions/quiz-questions.component.scss
@@ -1,6 +1,5 @@
 .container {
   margin-top: 30px;
-
 }
 
 .quiz-description {
@@ -12,7 +11,6 @@
   margin-top: 30px;
   margin-bottom: 0;
   padding: 0;
-  // max-width: 500px;
 }
 
 .player-container {
@@ -30,9 +28,6 @@
   width: 114px;
   height: 114px;
   background: linear-gradient(148.42deg, #EC1919 -0.53%, #D1C234 28.02%, #D134A5 60.47%, #3734D1 90.32%, #23B632 124.06%);
-
-
-  // z-index: 56;
   border-radius: 5px;
   margin-right: 20px;
 }
@@ -42,8 +37,8 @@
   top: 0;
   left: 0;
   border-radius: 5px;
-
-  /* Preserve aspet ratio */
+  object-fit: cover;
+  object-position: center;
   width: 114px;
   height: 114px;
 }
