--- a/src/app/shared/button/button.component.html
+++ b/src/app/shared/button/button.component.html
@@ -1,7 +1,6 @@
 <button type="submit"
-[disabled]="disabled"
->
-{{ name | uppercase }}
+[disabled]="disabled">
+  {{ name | uppercase }}
   <img src="../../../assets/arrow.svg" alt="arrow">
 </button>
 
