--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,6 @@
 <div class="background">
   <div class="bg-lights red"></div>
-  <!-- <app-welcome></app-welcome> -->
   <router-outlet></router-outlet>
-  <!-- <app-quiz></app-quiz> -->
+  <!-- <app-summary></app-summary> -->
 </div>
 
