--- a/src/app/quiz/components/answer-card/answer-card.component.scss
+++ b/src/app/quiz/components/answer-card/answer-card.component.scss
@@ -1,4 +1,3 @@
-
 .answer-card {
   margin-bottom: 10px;
   display: flex;
@@ -8,25 +7,18 @@
   border-radius: 5px;
   min-height: 30px;
   padding: 20px;
+  transition: ease-in-out .2s;
 
-
-
+  &:hover {
+    background-color: #373B62;
+    border: 1px solid #ffffff;
+  }
 }
-
-// .label {
-//   background: transparent url('../../../../assets/check.png') no-repeat 80% 50%
-//   // background: red url('../../../../assets/check.png') no-repeat 0 50%;
-// }
-
-// input {
-//   margin: 20px;
-// }
 
 .song-info {
   display: flex;
   color: #ffffff;
   line-height: 150%;
-
 }
 
 .round {
@@ -36,15 +28,12 @@
 
 .checkbox-label {
   background-color: #fff;
-  // background: red url('../../../../assets/check.png') no-repeat 50% 50%;
 }
 
 .round label {
-  // background: red url('../../../../assets/check.png') no-repeat 80% 50%;
-
   transform: translate(0%, -15%);
-  // background-color: #fff;
   border: 1px solid #ccc;
+  background-color: transparent;
   border-radius: 50%;
   cursor: pointer;
   height: 30px;
@@ -52,74 +41,8 @@
   position: absolute;
   top: -2px;
   width: 30px;
-
 }
-
-// .round label:after {
-//   border: 2px solid red;
-//   border-top: none;
-//   border-right: none;
-//   content: "";
-//   height: 6px;
-//   background-color: transparent;
-//   opacity: 0;
-//   position: absolute;
-//   top: 9px;
-//   left: 9px;
-//   transform: rotate(-45deg);
-//   width: 12px;
-// }
-
-// .round label:before {
-//   border: 2px solid lime;
-//   border-top: none;
-//   border-right: none;
-//   content: "";
-//   height: 6px;
-// // z-index: 70;
-//   opacity: 0;
-//   position: absolute;
-//   top: 9px;
-//   left: 9px;
-//   transform: rotate(90deg);
-//   width: 12px;
-// }
 
 .round input[type="checkbox"] {
   visibility: hidden;
 }
-
-// .round input[type="checkbox"]:checked + label {
-//   background-color: #3E6441;
-//   border-color: #619A65;
-// }
-
-.round input[type="checkbox"]:checked + label:after {
-  opacity: 1;
-}
-
-
-
-
-
-
-// <app-quiz-answer-option
-//         *ngFor="let answer of question.data; let i = index"
-//         [status]="status[answer.id]"
-//         (click)="onAswerClick(answer, i)"
-//       >
-//     {{'0' + (i + 1) +' : ' + answer.name +' - ' + answer.songTitle}}
-//     </app-quiz-answer-option>
-
-// <div class="question__answer-song">
-//     <p><ng-content></ng-content>></p>
-//   </div>
-
-
-
-
-
-
-
-
-
