--- a/src/app/quiz/quiz-info/quiz-info.component.html
+++ b/src/app/quiz/quiz-info/quiz-info.component.html
@@ -1,18 +1,4 @@
 <div class="container">
-  <h2 class="song-info">
-    {{ song.id }}: {{ song.name }} - {{ song.title }}
-  </h2>
-  <img src="https://levi9-song-quiz.herokuapp.com/api/images/1-3.jpg" alt="{{ song.name }}">
-  <div class="player-container">
-    <div class="button-container">
-      <app-player-button></app-player-button>
-    </div>
-    <div class="progress-bar">
-      <app-progress></app-progress>
-    </div>
-  </div>
-  <div class="description">
-    <p>Ella Fitzgerald, known as the "First Lady of Song" and "Lady Ella," was an immensely popular American jazz and song vocalist who interpreted much of the Great American Songbook.</p>
-  </div>
+  <ng-content></ng-content>
 </div>
 
