--- a/src/app/quiz/quiz-questions/quiz-questions.component.html
+++ b/src/app/quiz/quiz-questions/quiz-questions.component.html
@@ -1,22 +1,16 @@
 <div class="container">
   <h2>Jazz song</h2>
   <p class="quiz-description">Listen to the audio and guess what song is it from the list</p>
-  <app-audio-player></app-audio-player>
-  <!-- <div class="player-container">
-  <audio id="music_player">
-      <source [src]="song">
-    </audio> -->
-    <!-- <div class="control-block">
-      <app-player-button></app-player-button>
+  <app-audio-player>
+    <div class="control-block" >
+      <img id="bg" *ngIf="clicked" src="{{ imageUrl }}" alt="song image">
     </div>
-    <app-progress></app-progress>
-  </div> -->
+  </app-audio-player>
   <ul class="answer-list">
     <app-answer-card
-      *ngFor="let song of songArr; let i = index"
+      *ngFor="let song of songsArray; let i = index"
       [song]="song"
       [cardId]="'0'+ (i + 1)">
     </app-answer-card>
   </ul>
 </div>
-
