--- a/src/app/quiz/quiz.component.scss
+++ b/src/app/quiz/quiz.component.scss
@@ -24,6 +24,49 @@ header {
   margin-right: 30px;
 }
 
+.song-image {
+  width: calc(100% - 2px);
+  height: 374px;
+  object-fit: cover;
+  object-position: 50% 20%;
+  border: 1px solid #373B62;
+  border-radius: 10px 10px 0px 0px;
+}
+
+.song-info {
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+
+.player-container {
+  height: 47px;
+  background-color: #373B62;
+  border: 1px solid #373B62;
+  border-radius:  0px 0px 10px 10px;
+  padding: 20px;
+  display: flex;
+  justify-content: space-around;
+  position: relative;
+  align-items: center;
+  margin-top: -4px;
+  margin-bottom: 30px;
+}
+
+.button-container {
+  position: relative;
+  left: -40px;
+  top: -50px;
+}
+
+.progress-bar {
+  width: 90%;
+}
+
+.description {
+  color: rgba(255, 255, 255, .7);
+  text-align: center;
+  line-height: 150%;
+}
 
 main {
   position: relative;
@@ -32,7 +75,6 @@ main {
   background-color: #1B1D31;
   z-index: 10;
 }
-
 
 footer {
   width: 100%;
@@ -43,69 +85,19 @@ footer {
 
 .grid-container {
   max-width: 1680px;
-  // margin: 60px;
-  // height: 100%;
   display: grid;
   margin: 0 60px 60px;
-  // margin-top: 30px;
-  // margin-right: 60px;
   grid-column-gap: 60px;
-}
-
-// .cell {
-//   height: 500px;
-//   color: white;
-//   font-size: 3rem;
-//   text-align: center;
-// }
-// .cell-1 {
-//   background: deepskyblue;
-// }
-// .cell-2 {
-//   background: orangered;
-// }
-
-
-.cell-1 {
-  // display: none;
-}
-
-.cell-2 {
-  display: none;
 }
 
 @media (min-width: 1200px) {
   .grid-container {
     grid-template-columns: 1fr 1.6fr;
   }
-
-
 }
 
-
-// @media screen and (max-width: 1400px) {
-//   .grid-container {
-//     grid-template-columns: 1.2fr 1fr;
-
-//   }
-
-
-
-// }
-
 @media screen and (max-width: 1200px) {
-  // .grid-container {
-  //   grid-template-columns: 1fr;
-  //   // grid-template-rows: fr;
-  //   // grid-template-rows: 1fr 1fr;
-  // }
-
-  .cell-2 {
+  .union-image {
     display: none;
   }
-
-  .cell-1 {
-    display: block;
-  }
-
 }
