progress bar, game logic

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -70,3 +70,11 @@
     left: -150px;
   }
 }
+
+.cont {
+  width: 300px;
+  margin: 0 auto;
+  padding-top: 100px;
+  z-index: 7000;
+  cursor: pointer;
+}
