--- a/src/app/audio-player/components/progress/progress.component.html
+++ b/src/app/audio-player/components/progress/progress.component.html
@@ -1,7 +1,7 @@
 <div class="player-body">
   <input
   (change)="onChange(range.value)"
-  [ngStyle]="{background: drawProgressTrack()}"
+  [ngStyle]="{background: drawAudioTrack()}"
   #range
   type="range"
   id="current-time"
