--- a/src/app/audio-player/audio-player.component.html
+++ b/src/app/audio-player/audio-player.component.html
@@ -1,12 +1,8 @@
 <div class="player">
-  <audio
-  id="music_player"
-  preload="metadata">
-    <source [src]="song">
-  </audio>
+  <ng-content></ng-content>
   <div class="audio-player">
     <ng-content></ng-content>
-    <app-player-button></app-player-button>
+    <app-player-button [playerID]="'music-player-1'"></app-player-button>
     <app-progress></app-progress>
   </div>
 </div>
