--- a/src/app/quiz/components/progress-bar/progress-bar.component.html
+++ b/src/app/quiz/components/progress-bar/progress-bar.component.html
@@ -1,12 +1,36 @@
 <div class="progress">
-  <div class="scroll-line"></div>
+  <div class="scroll-line" [ngStyle]="{background: drawProgressTrack()}"></div>
   <div class="progress-list">
-    <div class="progress-genre">R&B</div>
-    <div class="progress-icon"><img src="../../assets/arrow.svg" alt=""></div>
-    <div class="progress-genre">JAZZ</div>
-    <div class="progress-icon"><img src="../../assets/arrow.svg" alt=""></div>
-    <div class="progress-genre">TECHNO</div>
-    <div class="progress-icon"><img src="../../assets/arrow.svg" alt=""></div>
-    <div class="progress-genre">SOUL</div>
+    <div class="progress-genre" [ngClass]="setStyle1">JAZZ</div>
+    <div class="progress-icon">
+      <svg width="20" height="20" viewBox="0 0 20 20" fill="#fff" xmlns="http://www.w3.org/2000/svg">
+        <path opacity=".9"
+        [ngStyle]="{'fill': !setStyle2 ?  '#fff' : '#DCA1F8' }"
+         fill-rule="evenodd"
+          clip-rule="evenodd"
+          d="M12.877 0.994414C12.6543 0.831114 12.3414 0.879252 12.1781 1.10193C12.0148 1.32462 12.0629 1.63752 12.2856 1.80082L18.0118 6.00004H1.44873C1.17259 6.00004 0.94873 6.2239 0.94873 6.50004C0.94873 6.77619 1.17259 7.00004 1.44873 7.00004H18.0118L12.2856 11.1993C12.0629 11.3626 12.0148 11.6755 12.1781 11.8981C12.3414 12.1208 12.6543 12.169 12.877 12.0057L19.8296 6.90704C19.8329 6.90471 19.8361 6.90234 19.8393 6.89993L20.3846 6.50004L19.8389 6.09984C19.836 6.09765 19.8331 6.09549 19.8301 6.09336L12.877 0.994414Z" fill="#fff"/>
+        </svg>
+    </div>
+    <div class="progress-genre" [ngClass]="setStyle2">ROCK</div>
+    <div class="progress-icon">
+      <svg width="20" height="20" viewBox="0 0 20 20" fill="#fff" xmlns="http://www.w3.org/2000/svg">
+        <path opacity=".9"
+          [ngStyle]="{'fill': !setStyle3 ?  '#fff' : '#DCA1F8' }"
+          fill-rule="evenodd"
+          clip-rule="evenodd"
+          d="M12.877 0.994414C12.6543 0.831114 12.3414 0.879252 12.1781 1.10193C12.0148 1.32462 12.0629 1.63752 12.2856 1.80082L18.0118 6.00004H1.44873C1.17259 6.00004 0.94873 6.2239 0.94873 6.50004C0.94873 6.77619 1.17259 7.00004 1.44873 7.00004H18.0118L12.2856 11.1993C12.0629 11.3626 12.0148 11.6755 12.1781 11.8981C12.3414 12.1208 12.6543 12.169 12.877 12.0057L19.8296 6.90704C19.8329 6.90471 19.8361 6.90234 19.8393 6.89993L20.3846 6.50004L19.8389 6.09984C19.836 6.09765 19.8331 6.09549 19.8301 6.09336L12.877 0.994414Z" fill="#fff"/>
+        </svg>
+    </div>
+    <div class="progress-genre" [ngClass]="setStyle3">POP</div>
+    <div class="progress-icon">
+      <svg width="20" height="20" viewBox="0 0 20 20" fill="#fff" xmlns="http://www.w3.org/2000/svg">
+        <path opacity=".9"
+          [ngStyle]="{'fill': !setStyle4 ?  '#fff' : '#DCA1F8' }"
+          fill-rule="evenodd"
+          clip-rule="evenodd"
+          d="M12.877 0.994414C12.6543 0.831114 12.3414 0.879252 12.1781 1.10193C12.0148 1.32462 12.0629 1.63752 12.2856 1.80082L18.0118 6.00004H1.44873C1.17259 6.00004 0.94873 6.2239 0.94873 6.50004C0.94873 6.77619 1.17259 7.00004 1.44873 7.00004H18.0118L12.2856 11.1993C12.0629 11.3626 12.0148 11.6755 12.1781 11.8981C12.3414 12.1208 12.6543 12.169 12.877 12.0057L19.8296 6.90704C19.8329 6.90471 19.8361 6.90234 19.8393 6.89993L20.3846 6.50004L19.8389 6.09984C19.836 6.09765 19.8331 6.09549 19.8301 6.09336L12.877 0.994414Z" fill="#fff"/>
+      </svg>
+    </div>
+    <div class="progress-genre" [ngClass]="setStyle4">SOUNDTRACK</div>
   </div>
 </div>
