added media queries

--- a/src/app/quiz/quiz-questions/quiz-questions.component.html
+++ b/src/app/quiz/quiz-questions/quiz-questions.component.html
@@ -7,7 +7,7 @@
       <source [src]="song">
     </audio>
     <div class="control-block">
-      <img id="bg" *ngIf="correctAnswer" src="{{ imageUrl }}" alt="song image">
+      <img class="correct-image" *ngIf="correctAnswer" src="{{ imageUrl }}" alt="song image">
     </div>
   </app-audio-player>
   <ul class="answer-list">
