--- a/src/app/audio-player/audio-player.component.scss
+++ b/src/app/audio-player/audio-player.component.scss
@@ -13,3 +13,10 @@
   align-items: center;
   justify-content: space-around;
 }
+
+@media screen and (max-width: 680px) {
+  .player {
+    padding-left: 14px;
+    padding-right: 5px;
+  }
+}
