--- a/src/app/quiz/components/progress-bar/progress-bar.component.scss
+++ b/src/app/quiz/components/progress-bar/progress-bar.component.scss
@@ -50,3 +50,16 @@
   color: #DCA1F8;
   opacity: 1;
 }
+
+
+@media screen and (max-width: 680px) {
+  .progress {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+
+  .progress-genre {
+    font-size: 12px;
+  }
+
+}
