--- a/src/app/quiz/quiz-questions/quiz-questions.component.scss
+++ b/src/app/quiz/quiz-questions/quiz-questions.component.scss
@@ -1,5 +1,5 @@
 .container {
-  margin-top: 30px;
+  margin-top: 20px;
 }
 
 .quiz-description {
@@ -32,13 +32,19 @@
   margin-right: 20px;
 }
 
-#bg {
+.correct-image {
   position: absolute;
   top: 0;
   left: 0;
   border-radius: 5px;
   object-fit: cover;
   object-position: center;
-  width: 114px;
+  width: 100%;
   height: 114px;
+}
+
+@media screen and (max-width: 680px) {
+  .control-block {
+    margin-right: 5px;
+  }
 }
